--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "@react-navigation/drawer": "^5.8.2",
     "@react-navigation/native": "^5.5.1",
     "@react-navigation/stack": "^5.5.1",
+    "axios": "^0.19.2",
     "expo": "~37.0.3",
+    "expo-firebase-analytics": "~2.1.1",
+    "expo-firebase-core": "~1.0.0",
+    "expo-sensors": "~8.1.0",
     "firebase": "^7.9.0",
     "lodash.merge": "^4.6.2",
     "moment": "^2.26.0",
@@ -28,8 +32,7 @@
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
     "react-native-web": "~0.11.7",
-    "expo-firebase-core": "~1.0.0",
-    "expo-firebase-analytics": "~2.1.1"
+    "react-native-webview": "^10.3.1"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.1.0",
